Fix layout breaking in es and pt

--- a/app/assets/stylesheets/click-tok-theme/stores/adcash/index.css
+++ b/app/assets/stylesheets/click-tok-theme/stores/adcash/index.css
@@ -49,11 +49,11 @@
 }
 
 .store--products-item--earnings--number b {
-    font-size: 0.5em;
-    font-weight: 400;
-    line-height: 1.65em;
-    vertical-align: text-top;
-  }
+  font-size: 0.5em;
+  font-weight: 400;
+  line-height: 1.65em;
+  vertical-align: text-top;
+}
 
 .store--products-item--earnings--campaign {
   white-space: nowrap;
@@ -94,19 +94,22 @@
 .store--products-item--price--buy-button {
   align-items: center;
   background-color: #5cb800;
-  border-radius: 12px;
+  border-radius: 0.5em;
   border: none;
   color: white;
   cursor: pointer;
   display: flex;
-  font-size: 1.4em;
+  font-size: 1.3em;
   font-weight: bold;
-  height: 1.3em;
   justify-content: center;
   opacity: 1;
-  padding: 0 2em;
+  padding: 0.1em 0.7em;
   transition: opacity 0.3s;
   width: auto;
+}
+
+.en .store--products-item--price--buy-button {
+  padding: 0.1em 1.5em;
 }
 
 .store--products-item:nth-child(1) .store--products-item--price--buy-button {
