--- a/app/assets/stylesheets/click-tok-theme/stores/ads/index.css
+++ b/app/assets/stylesheets/click-tok-theme/stores/ads/index.css
@@ -49,17 +49,16 @@
 .store--ads-item--price--buy-button {
   align-items: center;
   background-color: #5cb800;
-  border-radius: 12px;
+  border-radius: 0.4em;
   border: none;
   color: white;
   cursor: pointer;
   display: flex;
   font-size: 1.4em;
   font-weight: bold;
-  height: 1.3em;
   justify-content: center;
   opacity: 1;
-  padding: 0 1.5em;
+  padding: 0.1em 1.5em;
   transition: opacity 0.3s;
   width: auto;
 }
